--- a/client/src/app/components/main/main/main.component.scss
+++ b/client/src/app/components/main/main/main.component.scss
@@ -13,6 +13,16 @@ $sectionPadding: 150px 0;
   margin: 0 auto;
 }
 
+
+
+
+
+.example-is-mobile {
+  .sidenav-container {
+    flex: 1 0 auto;
+  }
+}
+
 .background{
   background-size: cover;
   position: relative;
@@ -23,7 +33,52 @@ $sectionPadding: 150px 0;
     width: 100%;
     .toolbar{
       position: absolute;
+      z-index: 9;
+      background: none;
     }
+    .toolbar-desktop {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
+    .toolbar-mobile {
+      position: fixed;
+      z-index: 999;
+      height: 64px;
+      justify-content: space-between;
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
+      .logo-wrapper {
+        width: auto;
+        height: 64px;
+
+        .logo {
+          height: 64px;
+          width: auto;
+        }
+      }
+    }
+
+    .sidenav-container {
+      flex: 1;
+      .sidenav {
+        width: 35vh !important;
+        top: 64px !important;
+        @media screen and (min-width: 768px) {
+          display: none;
+        }
+        .welcomeUsermobile {
+          line-height: 36px;
+          padding: 0 16px;
+          display: flex;
+          .sign-out {
+            margin-left: 10px;
+          }
+        }
+      }
+    }
+
     .header{
       z-index: 1;
       justify-content: space-between;
@@ -81,7 +136,7 @@ $sectionPadding: 150px 0;
         margin: 0 auto;
         position: relative;
         top: 30%;
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: 768px) {
           top: 40%;
           display: flex;
           justify-content: center;
@@ -92,7 +147,7 @@ $sectionPadding: 150px 0;
           max-width: 60%;
           width: 100%;
           color: #ffff;
-          @media screen and (max-width: 576px) {
+          @media screen and (max-width: 768px) {
             position: relative;
             left: 0;
           }
@@ -103,8 +158,15 @@ $sectionPadding: 150px 0;
             @media screen and (max-width: 992px) {
               font-size: 35px;
             }
-            @media screen and (max-width: 576px) {
+            @media screen and (max-width: 768px) {
               font-size: 11.4vw;
+              margin-bottom: 60px;
+            }
+            @media screen and (max-width: 576px) {
+              margin-bottom: 39px;
+            }
+            @media screen and (max-width: 411px) {
+              margin-bottom: 26px;
             }
           }
 
@@ -117,11 +179,9 @@ $sectionPadding: 150px 0;
               max-width: 320px;
             }
             @media screen and (max-width: 768px) {
-              font-size: 14px;
+              font-size: 2.6vw;
               max-width: 280px;
-            }
-            @media screen and (max-width: 576px) {
-              max-width: 100%;
+              max-width: 100%;;
             }
           }
 
@@ -130,7 +190,7 @@ $sectionPadding: 150px 0;
             position: relative;
             display: flex;
             justify-content: space-between;
-            @media screen and (min-width: 576px) {
+            @media screen and (min-width: 768px) {
               display: none;
               border: 4px solid black;
             }
@@ -174,9 +234,6 @@ $sectionPadding: 150px 0;
         width: 40vh;
       }
       @media screen and (max-width: 768px) {
-        width: 30vh;
-      }
-      @media screen and (max-width: 576px) {
         display: none;
       }
     }
@@ -212,16 +269,24 @@ $sectionPadding: 150px 0;
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.333333%;
     flex: 0 0 33.333333%;
-    max-width: 33.333333%;
+    max-width: 24%;
     padding-right: 15px;
     padding-left: 15px;
     background: rgba(0, 0, 0, 0) url('../../../../assets/img/icon-bg.png') no-repeat scroll center top;
+    @media screen and (max-width: 768px) {
+      flex: 0 0 100%;
+      max-width: 50%;
+    }
 
     i {
       font-size: 60px;
       display: block;
       text-align: center;
       margin-top: 22px;
+      @media screen and (max-width: 1200px) {
+        font-size: 50px;
+        margin-top: 28px;
+       }
     }
 
     h5 {
@@ -231,6 +296,12 @@ $sectionPadding: 150px 0;
       line-height: 1.2;
       text-align: center;
       color: $h2color;
+      @media screen and (max-width: 1200px) {
+        font-size: 18px;
+      }
+      @media screen and (max-width: 576px) {
+        font-size: 16px;
+      }
     }
 
     p {
@@ -239,6 +310,12 @@ $sectionPadding: 150px 0;
       line-height: $textLineHeight;
       margin-top: 0;
       text-align: center;
+      @media screen and (max-width: 1200px) {
+       font-size: 14px;
+      }
+      @media screen and (max-width: 576px) {
+        font-size: 12px;
+      }
     }
   }
 }
