--- a/client/src/app/components/cover-letters/cover-letters.component.html
+++ b/client/src/app/components/cover-letters/cover-letters.component.html
@@ -1,3 +1,16 @@
-<p>
-  cover-letters works!
-</p>
+<div class="bounds">
+    <div class="content"
+      fxLayout="row"
+      fxLayout.xs="column"
+      fxFlexFill
+      fxLayoutAlign="start"
+      >
+
+      <div fxFlex="33" class="sec1" fxFlex.xs="55" >
+          <app-letter-list></app-letter-list>
+      </div>
+      <div fxFlex="65" class="sec2" fxFlex="65">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
