--- a/client/src/app/components/clients/client-list/client-list.component.html
+++ b/client/src/app/components/clients/client-list/client-list.component.html
@@ -7,6 +7,7 @@
         <i class="fas fa-users"></i>
     </mat-card-header>
       <mat-list>
+          <mat-list-item *ngIf="clients?.length == 0">Not yet</mat-list-item>
         <ng-container *ngFor="let client of clients">
           <a [routerLink]="'edit/' + client._id" class="list-item-link">
             <mat-list-item class="list-item">{{client?.name}} {{client?.last_name}}</mat-list-item>
