--- a/client/src/app/components/contact-made/project/project.component.html
+++ b/client/src/app/components/contact-made/project/project.component.html
@@ -114,7 +114,7 @@
         </div>
         <div class="buttons">
             <button mat-raised-button color="primary" [disabled]="projectForm.invalid">Save</button>
-            <a mat-raised-button color="warn">Delete</a>
+            <a *ngIf="dataProject?._id" mat-raised-button color="warn" (click)="onDelete()">Delete</a>
         </div>
       </div>
     </div>
