--- a/client/src/app/components/main/main/main.component.scss
+++ b/client/src/app/components/main/main/main.component.scss
@@ -13,10 +13,6 @@ $sectionPadding: 150px 0;
   margin: 0 auto;
 }
 
-
-
-
-
 .example-is-mobile {
   .sidenav-container {
     flex: 1 0 auto;
@@ -37,7 +33,7 @@ $sectionPadding: 150px 0;
       background: none;
     }
     .toolbar-desktop {
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767.98px) {
         display: none;
       }
     }
@@ -46,7 +42,7 @@ $sectionPadding: 150px 0;
       z-index: 999;
       height: 64px;
       justify-content: space-between;
-      @media screen and (min-width: 768px) {
+      @media screen and (min-width: 767.98px) {
         display: none;
       }
       .logo-wrapper {
@@ -64,16 +60,41 @@ $sectionPadding: 150px 0;
       flex: 1;
       .sidenav {
         width: 35vh !important;
-        top: 64px !important;
-        @media screen and (min-width: 768px) {
+        top: 63px !important;
+        @media screen and (min-width: 767.98px) {
           display: none;
         }
         .welcomeUsermobile {
-          line-height: 36px;
           padding: 0 16px;
           display: flex;
+          flex-direction: column;
+          color: #fff;
+          background-image: linear-gradient(0deg, #ff7600 -25%, #3c52b5 74%);
+          font-weight: 300;
+          text-align: center;
+          .user-name {
+            font-size: 22px;
+          }
+          .user-email {
+            font-size: 12px;
+            margin-top: 0;
+            -webkit-font-smoothing: antialiased !important;
+          }
+          .user-company {
+            font-size: 14px;
+            margin: 0;
+            -webkit-font-smoothing: antialiased !important;
+          }
+          .sign-bottom {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 30px;
+            font-size: 12px;
+            -webkit-font-smoothing: antialiased !important;
+          }
           .sign-out {
-            margin-left: 10px;
+            color: #fff;
+            align-self: center;
           }
         }
       }
@@ -84,6 +105,9 @@ $sectionPadding: 150px 0;
       justify-content: space-between;
       margin: 0 auto;
       padding: 0 16px !important;
+      a {
+        font-weight: 400;
+      }
 
       .logo-wrapper {
         width: 100%;
@@ -136,7 +160,7 @@ $sectionPadding: 150px 0;
         margin: 0 auto;
         position: relative;
         top: 30%;
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 767.98px) {
           top: 40%;
           display: flex;
           justify-content: center;
@@ -147,7 +171,7 @@ $sectionPadding: 150px 0;
           max-width: 60%;
           width: 100%;
           color: #ffff;
-          @media screen and (max-width: 768px) {
+          @media screen and (max-width: 767.98px) {
             position: relative;
             left: 0;
           }
@@ -158,7 +182,7 @@ $sectionPadding: 150px 0;
             @media screen and (max-width: 992px) {
               font-size: 35px;
             }
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 767.98px) {
               font-size: 11.4vw;
               margin-bottom: 60px;
             }
@@ -178,7 +202,7 @@ $sectionPadding: 150px 0;
               font-size: 14px;
               max-width: 320px;
             }
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 767.98px) {
               font-size: 2.6vw;
               max-width: 280px;
               max-width: 100%;;
@@ -190,7 +214,7 @@ $sectionPadding: 150px 0;
             position: relative;
             display: flex;
             justify-content: space-between;
-            @media screen and (min-width: 768px) {
+            @media screen and (min-width: 767.98px) {
               display: none;
               border: 4px solid black;
             }
@@ -210,7 +234,7 @@ $sectionPadding: 150px 0;
 
       .canvas-overlay{
         position: absolute;
-        bottom: -1px;
+        bottom: -2px;
         background: url('../../../../assets/img/canvas.svg');
         background-size: cover;
         height: 300px;
@@ -233,7 +257,7 @@ $sectionPadding: 150px 0;
       @media screen and (max-width: 1200px) {
         width: 40vh;
       }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767.98px) {
         display: none;
       }
     }
@@ -241,10 +265,11 @@ $sectionPadding: 150px 0;
   }
 }
 
-.futures {
+.features {
   padding: 110px 0;
+  background: #fff;
 
-  .futures-title {
+  .features-title {
     padding-bottom: 80px;
     display: flex;
     justify-content: center;
@@ -253,7 +278,7 @@ $sectionPadding: 150px 0;
     background: rgba(0, 0, 0, 0) url('../../../../assets/img/path.png') no-repeat scroll center top;
     background-size: 189px auto;
 
-    .futures-badge {
+    .features-badge {
       background-color: rgba(92, 93, 232, 0.1);
       color: #4a5ebb;
     }
@@ -265,7 +290,7 @@ $sectionPadding: 150px 0;
       color: $h2color;
     }
   }
-  .futures-item {
+  .features-item {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.333333%;
     flex: 0 0 33.333333%;
@@ -273,7 +298,7 @@ $sectionPadding: 150px 0;
     padding-right: 15px;
     padding-left: 15px;
     background: rgba(0, 0, 0, 0) url('../../../../assets/img/icon-bg.png') no-repeat scroll center top;
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767.98px) {
       flex: 0 0 100%;
       max-width: 50%;
     }
@@ -355,7 +380,9 @@ $sectionPadding: 150px 0;
 .features-mid-wrapper {
 
   padding: $sectionPadding;
-
+  @media screen and (max-width: 767.98px) {
+   padding: 100px 0;
+  }
   .features-mid-block {
 
     .features-mid-img {
@@ -365,6 +392,9 @@ $sectionPadding: 150px 0;
       min-height: 1px;
       padding-right: 15px;
       padding-left: 15px;
+      @media screen and (max-width: 767.98px) {
+        text-align: center;
+       }
 
       img {
         max-width: 100%;
@@ -388,6 +418,11 @@ $sectionPadding: 150px 0;
         font-size: $textSize;
         line-height: $textLineHeight;
       }
+    }
+    .second-description {
+      @media screen and (max-width: 767.98px) {
+        order: 1;
+       }
     }
   }
 }
@@ -423,7 +458,9 @@ $sectionPadding: 150px 0;
     flex-direction: column;
     width: 100%;
     padding: 0 20%;
-
+    @media screen and (max-width: 411px) {
+      width: 80%;
+     }
     .contact-form-colspan {
       display: flex;
       justify-content: space-between;
@@ -437,7 +474,7 @@ $sectionPadding: 150px 0;
 footer {
 
   .social-incons {
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     text-align: center;
     font-size: $textSize;
 
